# reactome

./: .gitignore  README.md  collect.py  db.py  docker-compose.yml  logging_setup.py  main.py  pyproject.toml  settings.py  tasks.py  test.py  to_bel.py  utils.py
tests/: conftest.py  test_convert_reactions.py
